# MolSSI_App

./: README.md
BOCS_AUTO_TEST/: README.md
BOCS_AUTO_TEST/cgff_tables_tests/: drive_cgff_tests.sh
BOCS_AUTO_TEST/testing_suite_tools/: compare_output.sh  compare_output2.sh
Figure_1/: README.md
Figure_1/Gaussian_Deconvolution/: Deconvolve_Gaussian_Prior.py  Gaussians_Deconvolved.out  check.out
Figure_1/Learn_Forces/: calculate_potentials_and_forces.py
Figure_1/Learn_Forces/Full/: force.xy  potential.xy
Figure_1/Learn_Forces/Noise/: force.xy  potential.xy
Figure_1/Learn_Forces/Partial/: force.xy  potential.xy
Figure_1/Sample_w_Forces/: Langevin_Sampler.py  rebin.py
Figure_1/Training_Data/: Generate_Trim_and_Perturb_Data.py
Figure_1/Training_Data/Analytic/: WriteXY4.py  unnorm_pdf.xy
Figure_1/Training_Data/Results/: full_unperturbed_distribution.xy  partial_unperturbed_distribution.xy  perturbed_partial_distribution.xy  sanity_check_partial.xy
MBOCS_Functions/: README.md
MBOCS_Functions/Make_Par/: Build_This_Add_On.sh  CMakeLists.txt
MBOCS_Functions/Make_Par/src/: CMakeLists.txt
MBOCS_Functions/Make_Par/src/BOCS_Default/: gromacs_topology.h  io_read.c  io_read.h
MBOCS_Functions/Make_Par/src/Maria_Add/: par_builder.c  par_builder_fn.c  par_builder_fn.h
MBOCS_Functions/Make_Par/test_files_directions/: directions.txt  edit_my_par.sh
MBOCS_Functions/Orientation_Checker/: Build_This_Add_On.sh  CMakeLists.txt
MBOCS_Functions/Orientation_Checker/test_files_directions/: Directions.txt  bocstop.btp  map.DOX.top
Research_Scripts/: README.md
(+34 files in other folders)
